Update Drivers of Drug Adherence.ipynb
Factors that influence whether or not the patient is likely to stick with the drug schedule as prescribed by the Physician through
Data Encoding, Decision Tree, Random Forest, Logistic Regression

--- a/Drivers of Drug Adherence.ipynb
+++ b/Drivers of Drug Adherence.ipynb
@@ -5,7 +5,7 @@
    "id": "92f2af95",
    "metadata": {},
    "source": [
-    "# Understanding the drivers of Drug Adherence"
+    "# Understanding the Drivers of Drug Adherence"
    ]
   },
   {
